Bug 331007 - XmlHttpRequest HEAD requests are slow
Summary: XmlHttpRequest HEAD requests are slow
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.11.3
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL: http://greenbytes.de/tech/tc/httpredi...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-11 07:35 UTC by Julian Reschke
Modified: 2014-03-12 21:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Reschke 2014-02-11 07:35:37 UTC
It appears that HEAD requests are slow (for some value of slow); maybe they time out because something is waiting for the payload?

 Full test suite: http://greenbytes.de/tech/tc/httpredirects/

Reproducible: Always
Comment 1 Dawit Alemayehu 2014-02-11 10:32:38 UTC
See also https://bugs.kde.org/show_bug.cgi?id=330795#c3
Comment 2 Dawit Alemayehu 2014-02-17 17:29:20 UTC
Git commit 24d780debd65e5c2e957a0ab3dd1ba5b9885a42b by Dawit Alemayehu.
Committed on 11/02/2014 at 14:00.
Pushed by adawit into branch 'KDE/4.12'.

Fixed XMLHttpRequest HEAD requests in khtml.
REVIEW: 115689
FIXED-IN: 4.12.3

M  +7    -3    khtml/ecma/xmlhttprequest.cpp
M  +1    -0    kio/kio/job.cpp

http://commits.kde.org/kdelibs/24d780debd65e5c2e957a0ab3dd1ba5b9885a42b
Comment 3 Andrea Iacovitti 2014-03-12 21:26:20 UTC
Git commit 3d857d2171d4182954a2f4e90a2bc9a862b5c560 by Andrea Iacovitti.
Committed on 12/03/2014 at 21:21.
Pushed by aiacovitti into branch 'master'.

Fixed XMLHttpRequest HEAD requests in khtml. (kio part)
REVIEW: 115689
FIXED-IN: 4.12.3

(Forwardport kdelibs commit 24d780d)
CCMAIL: adawit@kde.org

M  +1    -0    src/core/transferjob.cpp

http://commits.kde.org/kio/3d857d2171d4182954a2f4e90a2bc9a862b5c560
Comment 4 Julian Reschke 2014-03-12 21:49:39 UTC
The comments in the code are somewhat misleading because RFC 2616 is obsolete.

That being said: thanks for fixing this.