Fixed XMLHttpRequest HEAD requests in khtml. (kio part)

BUG: 331007
REVIEW: 115689
FIXED-IN: 4.12.3

(Forwardport kdelibs commit 24d780d)
CCMAIL: adawit@kde.org